# pg_aws_deployment

./: Dockerfile  README.md  apply_pattern_lambda.py  apply_pattern_streamlit.py  apply_pattern_webapp.py  aws_deployment.sh  deploy.py  deploy_stateful.py  main.py  main_async.py  prev_iam_role_api_gateway_ex.txt.json  pyproject.toml  requirements.txt
_api/: _api.py  _chatbot.py  _function.py  _github.py  _openai.py  _tts.py
_aws/: _api_gateway.py  _kms.py  ec2.py  iam_role.py
_code/: _generate_common.py  _generate_docker_file.py  _generate_lambda_function.py  _generate_template.py
_common/: _code_read.py  _common.py  _decorator.py  _shell.sh
_config/: _config.py  _config.yaml
_connect/: _connect.py
_deployment/: _aws_lambda_deploy.py
_deployment/build_image/: build_image.py  setup_ecr.py
_deployment/deploy_api_gateway/: api_gateway_api_deployment.py  api_gateway_api_id.py  api_gateway_api_method.py  api_gateway_api_method_integration.py  apigatway_api.py  (+4 more)
_engine/: _engine.py
_example/: convert_sync_to_async_decorator.py  example_add_syspath.py  example_deployment_command_center.py  example_deployment_lambda.py  example_deployment_lambda2.py  example_deployment_lambda2_1.py  example_deployment_website.py  example_deployment_website_react.py  example_describe_ec2.py  example_github.py  example_role_test.py  integrate_with_embedchain.py  open_assisant.py
_logging/: _logging.py
_meta/: _meta.py
_task/: _aws_apigateway_lambda.py  _deploy_aws_website_streamlit.py  _task.py
_util/: _util_common.py  _util_directory.py  _util_ds.py  _util_file.py
(+14 files in other folders)
