[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Jian Huang <jianhuanggo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gitpython = "^3.1.41"
pygithub = "^2.1.1"
boto3 = "^1.34.144"
jinja2 = "^3.1.4"
pyyaml = "^6.0.2"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
